Bug 488173 - Desktop Widgets are disconnected from the pointer while dragging them in edit mode
Summary: Desktop Widgets are disconnected from the pointer while dragging them in edit...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: git-stable-Plasma/6.1
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-06-07 18:27 UTC by Nate Graham
Modified: 2024-06-21 13:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.1
Sentry Crash Report:


Attachments
working correctly (668.86 KB, video/webm)
2024-06-19 11:08 UTC, Marco Martin
Details
Actually no, it doesn't work (1.95 MB, video/mp4)
2024-06-20 16:51 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-06-07 18:27:29 UTC
This is an issue with the new edit mode UI in Plasma 6.1.


STEPS TO REPRODUCE
1. Have a widget on the desktop
2. Right-click on a panel > Show Panel Configuration (you can also reproduce the bug without the panel settings dialog open, but it's more dramatic this way)
3. Drag the widget that's on the desktop


OBSERVED RESULT
The position of the widget is not connected to the pointer, because the desktop is a scaled-down preview of the real thing.


EXPECTED RESULT
The widget remains connected to the pointer even in the scaled-down preview of the desktop.
Comment 1 David Redondo 2024-06-14 11:20:39 UTC
You can even see it moving in the background amazing!
Comment 2 Marco Martin 2024-06-19 11:08:54 UTC
Created attachment 170634 [details]
working correctly
Comment 3 Marco Martin 2024-06-19 11:11:01 UTC
can't reproduce, as the attached video, all the hit boxes of interactible items are mapped correctly
Comment 4 Marco Martin 2024-06-20 10:18:00 UTC
can you do a screencast?
Comment 5 Nate Graham 2024-06-20 16:51:56 UTC
Created attachment 170690 [details]
Actually no, it doesn't work

In your screen recording, you aren't moving anything enough to see the bug happen.

I've attached a screen recording that shows it happening. Notice how I grab the clock from its right-most edge, and by the time I'm done dragging it, the cursor is far away from the clock's right edge.
Comment 6 Marco Martin 2024-06-21 10:07:25 UTC
ok, reproduced, might know what it is
Comment 7 Bug Janitor Service 2024-06-21 12:43:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4473
Comment 8 Marco Martin 2024-06-21 13:27:29 UTC
Git commit 58a0bbc6039a6add479cf286470015ce41ddfb92 by Marco Martin.
Committed on 21/06/2024 at 12:36.
Pushed by mart into branch 'master'.

Mapping for mouse events considering transforms

if as mouse delta we only consider deltas of scene positions, those
will not be transformed, and if the whole appletslayout is scaled
(ie edit mode) the applet will be dragged not considering the scale,
not keeping it fixed uder the mouse

M  +9    -5    components/containmentlayoutmanager/itemcontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/58a0bbc6039a6add479cf286470015ce41ddfb92
Comment 9 Marco Martin 2024-06-21 13:48:34 UTC
Git commit dfd60e1db7be938096613ec8ea30887f0a537981 by Marco Martin.
Committed on 21/06/2024 at 13:27.
Pushed by mart into branch 'Plasma/6.1'.

Mapping for mouse events considering transforms

if as mouse delta we only consider deltas of scene positions, those
will not be transformed, and if the whole appletslayout is scaled
(ie edit mode) the applet will be dragged not considering the scale,
not keeping it fixed uder the mouse


(cherry picked from commit 58a0bbc6039a6add479cf286470015ce41ddfb92)

58a0bbc6 Mapping for mouse events considering transforms

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +9    -5    components/containmentlayoutmanager/itemcontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/dfd60e1db7be938096613ec8ea30887f0a537981