Mapping for mouse events considering transforms

if as mouse delta we only consider deltas of scene positions, those
will not be transformed, and if the whole appletslayout is scaled
(ie edit mode) the applet will be dragged not considering the scale,
not keeping it fixed uder the mouse

BUG:488173